[gd_scene load_steps=4 format=2]

[ext_resource path="res://Snake/PowerUp/PowerUp.gd" type="Script" id=1]
[ext_resource path="res://assets/M484BulletCollection2.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.5, 18 )

[node name="PowerUp" type="Area2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.499999, 1.43051e-06 )
scale = Vector2( 2.16667, 2 )
texture = ExtResource( 2 )
hframes = 4
vframes = 4
region_enabled = true
region_rect = Rect2( 280, 271, 73, 73 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_PowerUp_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
